--- a/app/templates/main/dashboard.html
+++ b/app/templates/main/dashboard.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="container mt-4">
   <h1 class="mb-4">Welcome to Your StockWatch Dashboard</h1>
+  <iframe src="{{ dash_url }}" width=" 100%" height="800px"></iframe>
 
   <div class="row">
     <div class="col-md-8">
