--- a/app/templates/main/dashboard.html
+++ b/app/templates/main/dashboard.html
@@ -1,30 +1,21 @@
 {% extends "base.html" %}
+
 {% block title %}Dashboard - StockWatch{% endblock %}
+
 {% block content %}
 <div class="container mt-4">
   <h1 class="mb-4">Welcome to Your StockWatch Dashboard, {{user.username}}</h1>
-  <iframe src="{{ dash_url }}" width=" 100%" height="800px"></iframe>
+
   <div class="row">
-    <div class="col-md-8">
-      <div class="card mb-4">
-        <div class="card-header">
-          Your Watchlist
-        </div>
-        <div class="card-body">
-          <!-- This will be populated dynamically in the future -->
-          <p>You don't have any stocks in your watchlist yet. Add some to get started!</p>
-        </div>
-      </div>
-      <div class="card mb-4">
-        <div class="card-header">
-          Market Overview
-        </div>
-        <div class="card-body">
-          <!-- This will be populated with real data in the future -->
-          <p>Market data will be displayed here.</p>
-        </div>
+    <div class="col-md-12">
+      <!-- This is where the Dash app will be rendered -->
+      <div id="dash-container">
+        <iframe src="{{ dash_url }}" width="100%" height="800px"></iframe>
       </div>
     </div>
+  </div>
+
+  <div class="row mt-4">
     <div class="col-md-4">
       <div class="card mb-4">
         <div class="card-header">
@@ -49,11 +40,12 @@
   </div>
 </div>
 {% endblock %}
+
 {% block scripts %}
 <script src="{{ dash_url }}dash-renderer"></script>
 <script id="_dash-config" type="application/json">
-        {
-            "url_base_pathname": "{{ dash_url }}"
-        }
-    </script>
+  {
+    "url_base_pathname": "{{ dash_url }}"
+  }
+</script>
 {% endblock %}
