chore: Update JavaScript links in base.html
The code changes in `base.html` update the JavaScript links by removing unnecessary whitespace.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,7 +41,7 @@
     <!-- Add footer content here -->
   </footer>
 
-  <!-- Add  JavaScript links here -->
+  <!--   JavaScript links here -->
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
   <!--  Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
